kubernetes/learn/15secret_mount_file.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apk-nginx
spec:
  revisionHistoryLimit: 5
  replicas: 3
  selector:
    matchLabels:
      app: apk-nginx
  template:
    metadata:
      labels:
        app: apk-nginx
    spec:
      containers:
        - name: apk-nginx
          image: nginx:1.22.1
          resources:
            limits:
              memory: "100Mi"
              cpu:  "10m"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /var/secret
              readOnly: true

      volumes:
        - name: config
          secret:
            secretName: testing.txt
