kubernetes/learn/16configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apk-nginx
spec:
  revisionHistoryLimit: 5
  replicas: 3
  selector:
    matchLabels:
      app: apk-nginx
  template:
    metadata:
      labels:
        app: apk-nginx
    spec:
      containers:
        - name: apk-nginx
          image: nginx:1.22.1
          resources:
            limits:
              memory: "100Mi"
              cpu:  "10m"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: configmap-test
              mountPath: "/config"
              readOnly: true

      volumes:
        - name: configmap-test
          configMap:
            name: configmap-test
            items:
              - key: FILE
                path: FILE
