kubernetes/learn/19startup_probe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app-startup
spec:
  selector:
    matchLabels:
      app: nginx-app-startup
  template:
    metadata:
      labels:
        app: nginx-app-startup
    spec:
      containers:
        - name: nginx-app-startup
          image: nginx:alpine
          resources:
            limits:
              memory: "100Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
          startupProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5 # tunggu 5 detik di awal sebelum melakukan probe yang pertama
            failureThreshold: 5 # berapa banyak error/failure yang ditoleransi
            periodSeconds: 10 # interval pengecekan

            # total 10 * 5 = 50 detik maksimal untuk container ini dicek
            # jika lebih dari 50 detik maka container akan di restart
