kubernetes/learn/26statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-stateful
spec:
  selector:
    matchLabels:
      app: nginx-stateful
  serviceName: nginx-stateful
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-stateful
    spec:
      containers:
        - name: nginx-stateful
          image: nginx:alpine
          ports:
            - containerPort: 80
              name: web
          volumeMounts:
            - name: www # samakan dengan volumeClaimTemplates
              mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
    - metadata:
        name: www
      spec:
        storageClassName: standard # sesuai dengan storage class yang ada
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
