kubernetes/learn/27node_selector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
spec:
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      nodeSelector:
        kubernetes.io/hostname: minikube-m02s
      containers:
        - name: nginx-app
          image: nginx:alpine
          ports:
            - containerPort: 80
