kubernetes/learn/2namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: podinfo

---

apiVersion: v1
kind: Pod
metadata:
  name: podinfo
  labels:
    name: podinfo
  namespace: podinfo
spec:
  containers:
  - name: podinfo
    image: stefanprodan/podinfo:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 9898
