kubernetes/learn/4annoatation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  annotations:
    description: cuma coba coba minikube q
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
