kubernetes/learn/24persistent_volume_claim.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-pv-pvc
spec:
  selector:
    matchLabels:
      app: nginx-pv-pvc
  template:
    metadata:
      labels:
        app: nginx-pv-pvc
    spec:
      # panggil PVC di volumes
      volumes:
        - name: coba-volume
          persistentVolumeClaim:
            claimName: mypvc
      containers:
        - name: nginx-pv-pvc
          image: nginx:alpine
          resources:
            limits:
              memory: "100Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
          # PVC yang sudah dipanggil di volumes, panggil disini untuk mengarahkan path di container
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: coba-volume
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-pv-pvc
spec:
  selector:
    app: nginx-pv-pvc
  ports:
    - port: 80
      targetPort: 80
