kubernetes/learn/8nodeport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apk-nginx
spec:
  revisionHistoryLimit: 5
  replicas: 3
  selector:
    matchLabels:
      app: apk-nginx
  template:
    metadata:
      labels:
        app: apk-nginx
    spec:
      containers:
        - name: apk-nginx
          image: nginx:1.22.1
          resources:
            limits:
              memory: "100Mi"
              cpu:  "10m"
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: service-nginx
spec:
  type: NodePort
  selector:
    app: apk-nginx
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30001
