kubernetes/learn/9loadbalancer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
spec:
  revisionHistoryLimit: 5
  replicas: 3
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      containers:
        - name: podinfo
          image: stefanprodan/podinfo:latest
          resources:
            limits:
              memory: "100Mi"
              cpu:  "10m"
          ports:
            - containerPort: 9898

---

apiVersion: v1
kind: Service
metadata:
  name: podinfo-service
spec:
  type: LoadBalancer
  selector:
    app: podinfo
  ports:
    - port: 80
      targetPort: 9898
