kubernetes/learn/10ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
spec:
  revisionHistoryLimit: 5
  replicas: 3
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      containers:
        - name: podinfo
          image: stefanprodan/podinfo:latest
          resources:
            limits:
              memory: "100Mi"
              cpu:  "10m"
          ports:
            - containerPort: 9898


---

apiVersion: v1
kind: Service
metadata:
  name: podinfo-service
spec:
  type: ClusterIP
  selector:
    app: podinfo
  ports:
    - port: 8080
      targetPort: 9898


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ingress
  labels:
    app: podinfo
spec:
  rules:
    - host: ingress.reiya.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name:  podinfo-serviceq
                port:
                  number: 8080
