kubernetes/learn/18bhttps_ingress_gke.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      containers:
        - name: podinfo
          image: stefanprodan/podinfo:latest
          resources:
            limits:
              memory: "100Mi"
              cpu: "10m"
          ports:
            - containerPort: 9898

---
apiVersion: v1
kind: Service
metadata:
  name: podinfo-service
spec:
  type: LoadBalancer
  selector:
    app: podinfo
  ports:
    - port: 80
      targetPort: 9898

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ingress
  labels:
    name: podinfo-service
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/v1beta1.FrontendConfig: lb-http-to-https
spec:
  tls:
    - hosts:
        - ingress.reiya.tech
      secretName: ingress.reiya.tech
  rules:
    - host: ingress.reiya.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: podinfo
                port:
                  number: 80
