kubernetes/learn/18https_ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      containers:
        - name: podinfo
          image: stefanprodan/podinfo:latest
          resources:
            limits:
              memory: "100Mi"
              cpu: "10m"
          ports:
            - containerPort: 9898

---
apiVersion: v1
kind: Service
metadata:
  name: podinfo-service
spec:
  type: ClusterIP
  selector:
    app: podinfo
  ports:
    - port: 8080
      targetPort: 9898

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ingress
  labels:
    name: podinfo-ingress
  annotations:
    # tiap cloud provider ada caranya masing-masing agar ingress dapat bekerja
    # biasanya menggunakan annotations
    # annotations dibawah ini jika kita menggunakan GKE (Google Kubernetes Engine)
    kubernetes.io/ingress.class: gce # https://cloud.google.com/kubernetes-engine/docs/concepts/ingress#controller_summary
    kubernetes.io/ingress.allow-http: "false" #https://cloud.google.com/kubernetes-engine/docs/concepts/ingress-xlb#disabling_http
spec:
  tls: # konfigurasi HTTPS
    - hosts:
        - ingress.reiya.tech
      secretName: ingress.reiya.tech # nama object secret TLS yang dibuat
  rules:
    - host: ingress.reiya.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: podinfo-service
                port:
                  number: 8080
